--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,26 @@
 
 body {
+  padding: 0px;
+  margin: 0px;
   background-color: lightblue;
-  background-image: image('backteria_bg.jpg');
 }
 
 h2 {
   text-align: center;
 }
 
+/* #bg-img {
+  position: fixed;
+  padding-left: 0px;
+  margin-left: 0px;
+  z-index: -99;
+  opacity: 0.8;
+  min-height: 100%;
+  min-width: 100%;
+} */
+
 .canvas-container {
+  background-color: lightblue;
   width: 700px;
   margin-left: auto;
   margin-right: auto;
